# Librelancer

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Credits.txt  LICENSE  LibreLancer.sln  LibreLancer.sln.DotSettings  LuaContext_Hardwire.cs  README.md  appveyor.yml  build.cake  build.cimgui.unix  build.config  build.natives.unix  build.ps1  build.sh  cake.config  log.txt  shell.nix  slngen.bat  slngen.conf  slngen.unix
.github/: FUNDING.yml
.github/workflows/: dev-builds.yml  pr-check.yml  sync.yml
Logs/: lancer.log.txt
docs/: XUTF Spec.txt  collada.md  env-vars.txt  frc.md  genicons.md  index.md  logfiles.md  model-importer.md  modeltab.md  modelviewer.md  scripts.md  search.html
docs/api/: api.txt  script-helpers.md
docs/assets/: code.css  lunr.js  main.css  open-sans.css  search.css  search.js  source-code-pro.css
editoricons/: buildicons
editoricons/sspack/: Constants.cs  Program.cs  ProgramArguments.cs  sspack.csproj
packaging/: mpv_minimal  package_daily  package_linux_daily  package_osx  package_win  timestamp
scripts/: build-freetype-mingw  depcheck_unix  helpers.cake  linuxinstall  mergepublish.cake  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake  monocheck  mysql-devclient  mysql-devserver  mysql-usersetup  patchedpublish.cake
scripts/BuildLL/: BuildLL.csproj  CustomPublish.cs  MingwDeps.cs  Program.cs  WindowsNatives.cs  template.html
shaders/: AsteroidBand.glsl  Atmosphere.glsl  Basic_Features.inc  Basic_Fragment.inc  Basic_PositionColor.glsl  Basic_PositionNormalColorTexture.glsl  Basic_PositionNormalTexture.glsl  Basic_PositionNormalTextureTwo.glsl  Basic_PositionTexture.glsl  Basic_Skinned.glsl  Billboard.glsl  DepthPass_AlphaTest.glsl  DepthPass_Normal.glsl  DetailMap2Dm1Msk2PassMaterial.glsl  DetailMapMaterial.glsl  EnvMapTest.glsl  IllumDetailMapMaterial.glsl  Masked2DetailMapMaterial.glsl  Navmap.glsl  NebulaExtPuff.glsl  NebulaInterior.glsl  NebulaMaterial.glsl  Nomad.glsl  Normals.glsl  PBR.glsl  Particle.glsl  PhysicsDebug.glsl  Polyline.glsl  Projectile.glsl  Ring.glsl  SunRadial.glsl  SunSpine.glsl  SunVertex.inc  ZoneVolume.glsl
shaders/ShaderProcessor/: CodeGenerator.cs  Compress.cs  DecompressTemplate.cs  EffectFile.cs  FeatureHelper.cs  Program.cs  ShaderCompiler.cs  ShaderProcessor.csproj  Unix.cs  Win32.cs
shaders/includes/: PositionTextureFlip.inc  blend_overlay.inc  camera.inc  lighting.inc  modulate.inc  sprite.inc
shaders/natives/: CMakeLists.txt  Makefile  gl2spv.cpp  gl2spv.h  shadercompiler.cpp  shadercompiler.h
slngen/: slngen.sln
slngen/slngen/: MSBuild.cs  Program.cs  packages.config  slngen.csproj  slngen_cs.embed
src/: .editorconfig  LibreLancer.sln  Shader Readme.txt  Shader.targets
src/BindingsGen/: README.txt
src/FxDebugger/: FxDebugger.csproj  LaunchWindow.cs  MainState.cs  Program.cs  packages.config
src/GenerateLuaHardwire/: GenerateLuaHardwire.csproj  Program.cs  README.txt
src/GeneratorCommon/: AttributeArguments.cs  EquatableArray.cs  Polyfill.cs  TabbedWriter.cs
src/ImGuiNet.Build451/: ImGuiNet.Build451.csproj  packages.config
src/LLServer/: LLServer.csproj  Program.cs  SqlDesignTimeFactory.cs
src/LLServer.Core/: LLServer.Core.csproj  ServerApp.cs  ServerConfig.cs  SqlDesignTimeFactory.cs
src/LLServerGui/: AppLog.cs  GuiHelpers.cs  LLServerGui.csproj  LLServerGui.csproj.DotSettings  LLServerGuiConfig.cs  MainWindow.cs  Program.cs  Screen.cs  ScreenManager.cs
src/LLShaderCompiler/: Args.cs  DXC.cs  FeatureHelper.cs  Program.cs  (+10 more)
src/bulletc_build/: CMakeLists.txt  README.txt
src/cimgui_ext/: CMakeLists.txt  ImGuizmo.cpp  ImGuizmo.h  cimgui_colortextedit.cpp  cimgui_dock.cpp  cimgui_dock.h  cimgui_ext.h  cimgui_freetype.cpp  cimgui_freetype.h  cimgui_guizmo.cpp  cimgui_memory_editor.cpp  cimgui_memory_editor.h  cimgui_node_editor.cpp  cimgui_spinner.cpp  cimgui_spinner.h  dcimgui_manual.cpp  dcimgui_manual.h  dcimgui_nodefaultargfunctions.cpp  dcimgui_nodefaultargfunctions.h  ft_unix.c  ftshim.c  ftshim.h  imconfig_ext.h  imgui_dock.cpp  imgui_freetype.cpp  imgui_freetype.h  imgui_memory_editor.h
src/cimgui_ext/ImGuiColorTextEdit/: ImGuiDebugPanel.cpp  LICENSE  README.txt  TextEditor.cpp  TextEditor.h  UnitTests.cpp  cimgui_colortextedit.cpp
src/cimgui_ext/cimgui/: ReadMe.txt  cimgui.vcxproj  cimgui.vcxproj.filters
src/cimgui_ext/controls/: ImGuizmo.cpp  cimgui_dock.cpp  cimgui_expression_input.cpp  cimgui_guizmo.cpp  cimgui_memory_editor.cpp  cimgui_spinner.cpp  expr.h
src/cimgui_ext/freetypeshim/: README
src/cimgui_ext/freetypeshim/freetype/: ftimage.h  fttypes.h
src/cimgui_ext/imgui-node-editor/: cimgui_node_editor.cpp  imgui_canvas.cpp  imgui_node_editor.cpp  imgui_node_editor.h  imgui_node_editor_internal.h
src/cimgui_ext/implot/: cimplot.cpp  cimplot_manual.cpp
src/cimgui_ext/include/: cimgui_ext.h  cimplot.h  cimplot_manual.h
src/crnlibglue/: CMakeLists.txt  crnlibglue.cpp  crnlibglue.h
src/lancerdialogs/: CMakeLists.txt  crashdialog_win32.c  crashdialog_win32.h  manifest.rc
src/nvtt_shared/: CMakeLists.txt  main.c
src/pangogame/: CMakeLists.txt
src/pangogame/include/: pangogame.h
src/pangogame/src/: pangogame.cpp  pangorender.cpp  pg_internal.h  stb.cpp  stb.h
src/win32dialogs/: CMakeLists.txt  dllmanifest.manifest  win32dialogs.h  win32dialogs.nfd.c  win32dialogs.win32.c
src_asm/: README  asmtobytes  matrixinvert_unix.S  matrixinvert_win.S  matrixmult_unix.S  matrixmult_win.S
tools/: packages.config
uixml/: alreadymapped.lua  alreadymapped.xml  asyncload.lua  asyncload.xml  baseside.lua  baseside.xml  characterlist.lua  characterlist.xml  chathistory.lua  chathistory.xml  childwindow.lua  childwindowmanager.lua  commodity.lua  commodity.xml  connecting.lua  connecting.xml  goods.lua  hud.lua  hud.xml  ids.lua  infowindow.lua  infowindow.xml  interface.librelancer-uiproj  ipentry.lua  ipentry.xml  jobboard.lua  jobboard.xml  loadgame.lua  loadgame.xml  loading.lua  login.lua  login.xml  mainmenu.lua  mainmenu.xml  mapkey.lua  mapkey.xml  mapwindow.lua  mapwindow.xml  modal.lua  modal.xml  (+29 more)
(+3882 files in other folders)
