cmake_minimum_required (VERSION 3.1)
project (librelancernatives)
set(CMAKE_BUILD_TYPE release)
set(CMAKE_C_STANDARD 99)
set(LIBOUTPUTDIR ${CMAKE_BINARY_DIR}/binaries)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBOUTPUTDIR})
# make it work on windows too
if(MSVC_IDE)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${LIBOUTPUTDIR}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${LIBOUTPUTDIR}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${LIBOUTPUTDIR}")
endif()
add_subdirectory(src/cimgui_ext cimgui)
add_subdirectory(src/lancerdecode lancerdecode)
add_subdirectory(src/pangogame pangogame)
add_subdirectory(src/crnlibglue crnlibglue)
add_subdirectory(src/bulletc_build bulletc)
if (WIN32)
  add_subdirectory(src/win32dialogs win32dialogs)
endif()
# lua has different project structure
# binary handled by nuget for windows
if(NOT WIN32)
    add_subdirectory(src/lua53 lua53)
endif()

